fix(): wrong color on autofill with light theme

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -34,3 +34,7 @@
 input:-webkit-autofill { 
   -webkit-background-clip: text;
 }
+
+input[type=email]:-webkit-autofill {
+  -webkit-text-fill-color: white
+}
